# ansible-role-ya-requestor

defaults/: main.yml
files/: fix_payment_initialization.sh  run_yagna.sh
files/simple_watchdog/: Cargo.toml  README.md
files/simple_watchdog/src/: main.rs
handlers/: main.yml
tasks/: check.yml  destroy.yml  main.yml  restart.yml  stop.yml
templates/: .env.j2  dot_env.j2  promtail.service.j2  promtail_config.yaml.j2  simple_watchdog.service.j2  simple_watchdog.timer.j2  yagna.service.j2
tests/: Vagrantfile  test.yml
vars/: main.yml
