[package]
name = "simple_watchdog"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
chrono = { version = "0.4.26", default-features = false, features = ["clock", "std"] }
clap = { version = "4.3.19", features = ["derive"] }
duration-string = "0.3.0"
lazy_static = "1.4.0"
regex = "1.9.1"
